changed card height, added car right padding to stop info overflow, finished token show

--- a/app/assets/stylesheets/businesses/show.scss
+++ b/app/assets/stylesheets/businesses/show.scss
@@ -17,9 +17,11 @@
 } p {
   opacity: 0.6;
 } h3 {
-  color: white;
+  color: gray;
   font-size: 24px;
-} h1:hover {
+}
+
+.shadow-hover:hover {
   text-shadow: 1px 1px 1px;
 }
 
@@ -64,6 +66,15 @@
   color: black !important;
 }
 
+.card-link {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  z-index: 99;
+  opacity: 0;
+}
 
 // .show_image {
 
