--- a/app/assets/stylesheets/components/_index-card.scss
+++ b/app/assets/stylesheets/components/_index-card.scss
@@ -1,6 +1,6 @@
 .card {
   margin-bottom: 33px;
-  height: 300px;
+  height: 350px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
   background-position: center;
@@ -33,6 +33,7 @@
 .card-content {
   position: absolute;
   bottom: 15px;
+  padding-right: 10px;
 }
 
 .featured-card-alert {
